# SmartClinic

./: .dockerignore  .env  .env.test  .gitattributes  .gitignore  .ruff.toml  .vscode  LICENSE  example.db  pyproject.toml  ruff.toml  test.ipynb  test.py  ui_test.html
UI/core/admin/: files.html  index.html  upload.html  users.html
UI/core/auth/: auth-guard.js  login.html  register.html
UI/core/chat/: chatbot.html  chatbot_markdown.html  history_chatbot_local.html
UI/core/heart_failure/: heart_failure_form.html  heart_result.html
UI/core/lung_cancer/: lung_cancer_form.html  lung_resul_1.html  lung_result.html
UI/core/turmor_brain/: result_predict.html  turmor_brain.html
UI/home/: about.html  main.html
UI/static/: highlight.min.js  marked.min.js
UI_TEST/core/chat/: chatbot_markdown.html
UI_TEST/core/heart_failure/: heart_failure_form.html  heart_result.html
UI_TEST/core/lung_cancer/: lung_cancer_form.html  lung_result.html
UI_TEST/core/turmor_brain/: result_predict.html  turmor_brain.html
UI_TEST/home/: about.html
UI_TEST_1/core/chat/: chatbot_markdown.html
UI_TEST_1/core/heart_failure/: heart_result.html
UI_TEST_1/core/lung_cancer/: lung_cancer_form.html
UI_TEST_1/core/turmor_brain/: result_predict.html
UI_TEST_2/core/admin/: files.html  index.html  upload.html
UI_TEST_2/core/heart_failure/: heart_failure_form.html
UI_TEST_2/home/: main.html
docker/: elastic.yaml  milvus.yaml
docker/UI/: Dockerfile  ui.yaml
docker/smartclinic/: Dockerfile  docker-compose.yaml
models/model_normalize/: breast_cancer.pkl  lung_cancer.pkl
models/model_predict/: KNNUngThuPhoi12.pkl  breast_cancer.pkl  heart_failure.pkl  lung_cancer.pkl
notebooks/: SuyTim.ipynb  Tramcam.ipynb  UngThuPhoi.ipynb  Ungthuvu.ipynb  breast_cancer.ipynb  corona.ipynb  depression.ipynb  heart_failure.ipynb  lung_cancer.ipynb  tumor-classification-with-vgg16.ipynb
src/smartclinic/: __init__.py
(+58 files in other folders)
