[project]
name = "smartclinic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "phamkhai108", email = "phamkhai8100@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "just>=0.8.162",
    "pandas>=2.2.3",
    "ruff>=0.11.2",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
